# llmperf

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mock.yaml  pyproject.toml  pytest.ini  start.bat  start.sh
.claude/: settings.json
configs/: mock_multi_model.yaml
data/datasets/: CC_testset_query.meta.json  Math_testset_query.jsonl  Math_testset_query.meta.json  OC_testset_query.meta.json  test.jsonl  test.meta.json  test_3.meta.json
docs/: PRODUCT_REDESIGN.md
frontend/: .npmrc  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/playwright-report/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: DatasetPreviewList.tsx  ExecutorTopologyGraph.tsx  StatCard.tsx  StatusTag.tsx  TaskProgressBar.tsx  YamlEditor.tsx  (+1 more)
frontend/tests/: report.spec.ts
pricings/: 20251227.yaml
resource/: demo.jsonl
scripts/: convert_query_testsets.py
src/llmperf/: __init__.py  runner.py
template/: 0.1.0.yaml  excel.yaml  export.yaml  mock.yaml  monitoring.yaml  stability.yaml  summary.yaml  test_duration_limit.yaml  test_health.yaml  test_monitoring_report.yaml  test_ratelimit.yaml  test_resource.yaml  test_stability.yaml
tests/: conftest.py  test_analysis_history_export.py  test_dataset_service.py  test_execution_ssot.py  test_export.py  test_mock_openai_endpoint.py  test_mutation_chain.py  test_notifications.py  test_pricing_linkage.py  test_provider_mapping.py  test_rate_limiter.py  test_task_execution_controls.py  test_web_api.py  test_web_task_creation.py
(+135 files in other folders)
